# lplcore

./: CMakeLists.txt
include/lplcore/: header.h  types.h
src/: header.c
tests/: CMakeLists.txt  append.c  delete.c  header_new.c  search.c
